Part3/P1/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Users/kevin/Desktop/BlueJ 3.1.5-duke/BlueJ.app/Contents/Frameworks/jdk.framework/Versions/A/Contents/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/Users/kevin/Desktop/BlueJ 3.1.5-duke/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Users/kevin/Desktop/BlueJ 3.1.5-duke/BlueJ.app/Contents/Resources/Java/junit-4.8.2.jar:/Users/kevin/Desktop/BlueJ 3.1.5-duke/BlueJ.app/Contents/Resources/Java/userlib/apache-csv.jar:/Users/kevin/Desktop/BlueJ 3.1.5-duke/BlueJ.app/Contents/Resources/Java/userlib/courserajava.jar:/Users/kevin/Desktop/BlueJ 3.1.5-duke/BlueJ.app/Contents/Resources/Java/userlib/pi4j-core.jar:/Users/kevin/Desktop/BlueJ 3.1.5-duke/BlueJ.app/Contents/Resources/Java/userlib/pi4j-device.jar:/Users/kevin/Desktop/BlueJ 3.1.5-duke/BlueJ.app/Contents/Resources/Java/userlib/pi4j-gpio-extension.jar:/Users/kevin/Desktop/BlueJ 3.1.5-duke/BlueJ.app/Contents/Resources/Java/userlib/pi4j-service.jar:/Users/kevin/Desktop/Duke_Java/P1
-d
/Users/kevin/Desktop/Duke_Java/P1/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/Users/kevin/Desktop/BlueJ 3.1.5-duke/BlueJ.app/Contents/Resources/Java/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/Users/kevin/Desktop/Duke_Java/P1/WordLengths.java
<---- end of javadoc command ---->
Loading source file /Users/kevin/Desktop/Duke_Java/P1/WordLengths.java...
Constructing Javadoc information...
/Users/kevin/Desktop/Duke_Java/P1/WordLengths.java:9: error: cannot find symbol
    public void countWordLengths(FileResource resource, int[] counts){
                                 ^
  symbol:   class FileResource
  location: class WordLengths
Standard Doclet version 1.8.0_60
Building tree for all the packages and classes...
Generating /Users/kevin/Desktop/Duke_Java/P1/doc/WordLengths.html...
Generating /Users/kevin/Desktop/Duke_Java/P1/doc/package-frame.html...
Generating /Users/kevin/Desktop/Duke_Java/P1/doc/package-summary.html...
Generating /Users/kevin/Desktop/Duke_Java/P1/doc/constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating /Users/kevin/Desktop/Duke_Java/P1/doc/allclasses-frame.html...
Generating /Users/kevin/Desktop/Duke_Java/P1/doc/allclasses-noframe.html...
Generating /Users/kevin/Desktop/Duke_Java/P1/doc/index.html...
Generating /Users/kevin/Desktop/Duke_Java/P1/doc/stylesheet.css...
1 warning
